force-app/main/default/objects/custom_create291__c/custom_create291__c.object-meta.xml
<CustomObject>
    <label>Custom created object291</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects291</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>