force-app/main/default/objects/custom_create291__c/fields/custom_create_291field552__c.field-meta.xml
<CustomField>
    <fullName>custom_create_291field552__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 291field552</label>
    <type>Checkbox</type>
</CustomField>